--- a/U1-M1-L1-prep-normalization.ipynb
+++ b/U1-M1-L1-prep-normalization.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Preprocessing: Normalization\n",
+    "# Assignment: Normalization\n",
     "\n",
     "In this assignment we ask you to implement different normalization procedures to reproduce the notes outputs for the example data set. You may compare your plots to those in the notes to check your work.\n",
     "\n",
@@ -158,7 +158,7 @@
    },
    "outputs": [],
    "source": [
-    "# Implement mean normalization below (1 pt)\n",
+    "# Implement mean normalization below (2 pt)\n",
     "\n",
     "def norm_mean(X):\n",
     "    \"\"\"Applies mean normalization to a data matrix\"\"\"\n",
@@ -210,7 +210,7 @@
    },
    "outputs": [],
    "source": [
-    "# Implement standardization below (1 pt)\n",
+    "# Implement standardization below (2 pt)\n",
     "\n",
     "def norm_standardize(X):\n",
     "    \"\"\"Applies standardization to a data matrix so each feature has mean 0 and sd 1.\"\"\"\n",
@@ -262,7 +262,7 @@
    },
    "outputs": [],
    "source": [
-    "# Implement row scaling to unit length below (1 pt)\n",
+    "# Implement row scaling to unit length below (2 pt)\n",
     "\n",
     "def norm_unit_length(X, norm=2):\n",
     "    \"\"\"Scales each feature vector of a data matrix to unit length.\"\"\"\n",
@@ -366,7 +366,7 @@
    },
    "outputs": [],
    "source": [
-    "# Implement robust scaling below\n",
+    "# Implement robust scaling below (2 pts)\n",
     "\n",
     "def norm_robust(X):\n",
     "    \"\"\"Applies normalization of a data matrix based on the median and the IQR\"\"\"\n",
